@@ -688,6 +688,14 @@ CURLcode Curl_http(struct connectdata *conn)
     conn->allocptr.uagent=NULL;
   }
 
+#ifdef GSSAPI
+  if (data->state.negotiate.context && 
+      !GSS_ERROR(data->state.negotiate.status)) {
+     result = Curl_output_negotiate(conn);
+     if (result)
+	return result;
+  } else
+#endif
   if(data->state.digest.nonce) {
     result = Curl_output_digest(conn,
                                 (unsigned char *)request,
