@@ -7,6 +7,11 @@
                                   Changelog
 
 Daniel (10 June)
+- Daniel Kouril added HTTP Negotiate authentication support, as defined in the
+  IETF draft draft-brezak-spnego-http-04.txt. In use already by various
+  Microsoft web applications. CURLOPT_HTTPNEGOTIATE and --negotiate are the
+  new family members.
+
 - A missing ending bracket (']') while doing URL globbing could lead to a
   segfault. While fixing this, I also introduced better error reporting in the
   globbing code. (All this is application code outside libcurl.)
